--- a/AndroidTest/openCVmixedprocessing/app/src/main/res/layout/activity_main.xml
+++ b/AndroidTest/openCVmixedprocessing/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,20 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <LinearLayout
+        xmlns:opencv="http://schemas.android.com/apk/res-auto"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <org.opencv.android.JavaCameraView
+            android:id="@+id/camera_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            opencv:show_fps="true"
+            opencv:camera_id="0" />
+    </LinearLayout>
+
     <TextView
         android:id="@+id/sample_text"
         android:layout_width="wrap_content"
