--- a/easyqc3/app/src/main/res/layout/activity_main.xml
+++ b/easyqc3/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,11 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <org.opencv.android.JavaCameraView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/activity_surface_view" />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
