--- a/easyqc3/app/src/main/res/values/colors.xml
+++ b/easyqc3/app/src/main/res/values/colors.xml
@@ -2,4 +2,5 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="deepblue">#015a95</color>
 </resources>
