홈 화면 생성 및 액티비티 연결

--- a/easyqc3/app/src/main/res/values/colors.xml
+++ b/easyqc3/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="deepblue">#015a95</color>
+    <color name="nomalblue">#0278c2</color>
+    <color name="lightblue">#b1d5ec</color>
+
 </resources>
