--- a/easyqc3/app/src/main/res/layout/activity_standard.xml
+++ b/easyqc3/app/src/main/res/layout/activity_standard.xml
@@ -1,10 +1,170 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/gradient"
+    android:padding="35dp"
     tools:context=".StandardActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="70dp"
+        android:gravity="center"
+        android:text="계측 기준 설정"
+        android:textSize="35sp"
+        android:textStyle="bold">
+    </TextView>
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="652dp"
+        android:layout_marginTop="140dp"
+        android:scaleType="fitXY"
+        android:src="@drawable/formbox1">
+
+    </ImageView>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:layout_marginTop="140dp"
+        android:layout_marginBottom="60dp"
+        android:padding="16dp">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:layout_marginTop="12dp"
+            android:layout_marginLeft="10dp"
+            android:gravity="center"
+            android:text="기준 길이 입력"
+            android:textStyle="bold"
+            android:textSize="23sp">
+        </TextView>
+
+        <EditText
+            android:id="@+id/setReferenceLength"
+            android:layout_width="271dp"
+            android:layout_height="0dp"
+            android:layout_marginStart="0dp"
+            android:layout_marginTop="0dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:background="@drawable/select_box"
+            android:hint="ex) 10.3" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:padding="10dp"
+            android:layout_marginLeft="10dp"
+            android:gravity="center"
+            android:text="허용 오차 입력"
+            android:textStyle="bold"
+            android:textSize="23sp">
+        </TextView>
+
+
+        <EditText
+            android:id="@+id/setTolerance"
+            android:layout_width="271dp"
+            android:layout_height="0dp"
+            android:layout_marginStart="0dp"
+            android:layout_marginTop="0dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:background="@drawable/select_box"
+            android:hint="ex) 5" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:padding="10dp"
+            android:layout_marginLeft="10dp"
+            android:gravity="center"
+            android:text="측정 단위 입력"
+            android:textStyle="bold"
+            android:textSize="23sp">
+        </TextView>
+
+        <EditText
+            android:id="@+id/setUnit"
+            android:layout_width="271dp"
+            android:layout_height="0dp"
+            android:layout_marginStart="0dp"
+            android:layout_marginTop="0dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:background="@drawable/select_box"
+            android:hint="ex) mm, cm " />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="10dp"
+            android:gravity="center"
+            android:text="예비 세팅 입력"
+            android:textStyle="bold"
+            android:textSize="23sp">
+        </TextView>
+
+        <EditText
+            android:id="@+id/additionalData"
+            android:layout_width="271dp"
+            android:layout_height="0dp"
+            android:layout_marginStart="0dp"
+            android:layout_marginTop="0dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:background="@drawable/select_box"
+            android:hint="값 입력" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="10dp"
+            android:gravity="center"
+            android:text="예비 세팅 입력"
+            android:textStyle="bold"
+            android:textSize="23sp">
+        </TextView>
+
+        <EditText
+            android:id="@+id/additionalData2"
+            android:layout_width="271dp"
+            android:layout_height="0dp"
+            android:layout_marginStart="0dp"
+            android:layout_marginTop="0dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:background="@drawable/select_box"
+            android:hint="값 입력" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/setSendButton"
+            android:layout_width="200dp"
+            android:layout_height="50dp"
+            android:text="입력 완료"
+            android:textColor="@color/white"
+            android:background="@drawable/roundbtn"
+            android:textSize="20sp"
+            android:layout_marginTop="30dp"
+            android:layout_marginBottom="0dp" />
+
+    </LinearLayout>
+
+</FrameLayout>
