ActionBar 안나오게 되어 있어서 버튼 추가 해서 카메라 변형적용

--- a/easyqc3/app/src/main/res/values/themes.xml
+++ b/easyqc3/app/src/main/res/values/themes.xml
@@ -6,4 +6,9 @@
     </style>
 
     <style name="Theme.Easyqc3" parent="Base.Theme.Easyqc3" />
+
+    <style name="Theme.ActionBar" parent="Theme.AppCompat.Light.DarkActionBar">
+        <!-- ActionBar가 있는 테마 사용 -->
+    </style>
+
 </resources>
