--- a/easyqc3/app/src/main/res/layout/tutorial2_surface_view.xml
+++ b/easyqc3/app/src/main/res/layout/tutorial2_surface_view.xml
@@ -28,13 +28,13 @@
             android:id="@+id/btn2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="GRAY" />
+            android:text="검증 중지" />
 
         <Button
             android:id="@+id/btn3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="CANNY" />
+            android:text="검증 시작" />
 
         <Button
             android:id="@+id/btn4"
