--- a/easyqc3/app/src/main/res/layout/activity_standard.xml
+++ b/easyqc3/app/src/main/res/layout/activity_standard.xml
@@ -102,7 +102,9 @@
             android:layout_width="271dp"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:background="@drawable/select_box"></Spinner>
+            android:textAlignment="center"
+            android:background="@drawable/select_box">
+        </Spinner>
 
         <TextView
             android:layout_width="match_parent"
