--- a/easyqc3/app/src/main/res/layout/activity_home.xml
+++ b/easyqc3/app/src/main/res/layout/activity_home.xml
@@ -12,7 +12,7 @@
 
         <FrameLayout
             android:layout_width="match_parent"
-            android:layout_marginTop="200dp"
+            android:layout_marginTop="100dp"
             android:layout_height="150dp">
 
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -59,13 +59,13 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="sans-serif"
-                    android:text="양품"
+                    android:text=" 양품: "
                     android:textColor="@android:color/black"
                     android:textSize="18sp"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="@+id/imageView"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.047"
+                    app:layout_constraintHorizontal_bias="0.111"
                     app:layout_constraintStart_toStartOf="@+id/imageView"
                     app:layout_constraintTop_toTopOf="@+id/imageView"
                     app:layout_constraintVertical_bias="0.709" />
@@ -76,28 +76,29 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
                     android:fontFamily="sans-serif"
-                    android:text="양품결과"
+                    android:text=" -- 건"
                     android:textColor="@android:color/black"
-                    android:textSize="30sp"
+                    android:textSize="18sp"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="@+id/goodProductTextiew"
                     app:layout_constraintEnd_toStartOf="@+id/guideline"
-                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintHorizontal_bias="0.509"
                     app:layout_constraintStart_toEndOf="@+id/goodProductTextiew"
-                    app:layout_constraintTop_toTopOf="@+id/goodProductTextiew" />
+                    app:layout_constraintTop_toTopOf="@+id/goodProductTextiew"
+                    app:layout_constraintVertical_bias="0.0" />
 
                 <TextView
                     android:id="@+id/badProductTextiew"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="sans-serif"
-                    android:text="불량품"
+                    android:text="불량품: "
                     android:textColor="@android:color/black"
                     android:textSize="18sp"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="@+id/goodProductTextiew"
                     app:layout_constraintEnd_toEndOf="@+id/imageView"
-                    app:layout_constraintHorizontal_bias="0.044"
+                    app:layout_constraintHorizontal_bias="0.126"
                     app:layout_constraintStart_toStartOf="@+id/guideline"
                     app:layout_constraintTop_toTopOf="@+id/goodProductTextiew"
                     app:layout_constraintVertical_bias="0.0" />
@@ -108,9 +109,9 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="4dp"
                     android:fontFamily="sans-serif"
-                    android:text="불량품결과"
+                    android:text=" -- 건"
                     android:textColor="@android:color/black"
-                    android:textSize="30sp"
+                    android:textSize="18sp"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="@+id/badProductTextiew"
                     app:layout_constraintEnd_toEndOf="@+id/imageView"
@@ -191,7 +192,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="히스토리 확인"
+            android:text="검증내역 확인"
             android:textColor="@android:color/black"
             android:textSize="23sp"
             android:fontFamily="sans-serif"
