--- a/easyqc3/app/src/main/res/values/arrays.xml
+++ b/easyqc3/app/src/main/res/values/arrays.xml
@@ -3,5 +3,6 @@
     <string-array name="units">
         <item>mm</item>
         <item>cm</item>
+        <item>inch</item>
     </string-array>
 </resources>
