--- a/easyqc3/app/src/main/res/layout/item_history.xml
+++ b/easyqc3/app/src/main/res/layout/item_history.xml
@@ -31,9 +31,9 @@
 
         <!-- 왼쪽 이미지 -->
         <ImageView
-            android:id="@+id/dataImage"
-            android:layout_width="130dp"
-            android:layout_height="130dp"
+            android:id="@+id/resultImage"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
             android:src="@drawable/ic_launcher_foreground"
             android:scaleType="centerCrop"
             android:layout_marginEnd="16dp" />
@@ -52,7 +52,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="첫 번째 줄"
-                android:textSize="12sp"
+                android:textSize="16sp"
                 android:textColor="#000000"
                 android:paddingBottom="4dp" />
 
@@ -61,7 +61,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="두 번째 줄"
-                android:textSize="12sp"
+                android:textSize="16sp"
                 android:textColor="#000000"
                 android:paddingBottom="4dp" />
 
@@ -70,7 +70,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="세 번째 줄"
-                android:textSize="12sp"
+                android:textSize="16sp"
                 android:textColor="#000000"
                 android:paddingBottom="4dp" />
 
@@ -79,15 +79,15 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="네 번째 줄"
-                android:textSize="12sp"
+                android:textSize="16sp"
                 android:textColor="#000000" />
 
             <TextView
                 android:id="@+id/result"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="네 번째 줄"
-                android:textSize="12sp"
+                android:text="다섯 번째 줄"
+                android:textSize="16sp"
                 android:textColor="#000000" />
 
         </LinearLayout>
