불량, 양품 판정 작업중
1.불량, 양품 판정 기준은 만들어 처리 되는데.
  UI에 반영하면서 죽는 현상이 나와서 확인 중..

--- a/easyqc3/app/src/main/res/layout/tutorial2_surface_view.xml
+++ b/easyqc3/app/src/main/res/layout/tutorial2_surface_view.xml
@@ -51,6 +51,7 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/result_all_Layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
