측정값 DB 올리기 함수 저장

--- a/easyqc3/app/src/main/res/layout/tutorial2_surface_view.xml
+++ b/easyqc3/app/src/main/res/layout/tutorial2_surface_view.xml
@@ -27,14 +27,14 @@
                 android:id="@+id/btn1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="RGB" />
+                android:text="RGB" /> -->
 
             <Button
                 android:id="@+id/btn2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="검증 중지" />
-    -->
+
             <Button
                 android:id="@+id/btn3"
                 android:layout_width="wrap_content"
