--- a/easyqc3/app/src/main/res/values/colors.xml
+++ b/easyqc3/app/src/main/res/values/colors.xml
@@ -7,5 +7,8 @@
     <color name="lightblue">#b1d5ec</color>
     <color name="green">#388E3C</color>
     <color name='red'>#F44336</color>
+    <color name='deepwhite'>#F0F0F0</color>
+
+
 
 </resources>
